# paseto

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  circle.yml  rustfmt.toml
.azure-pipelines/: linux-merge.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  main.workflow
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  rust.yml
benches/criterion_benches/: main.rs  pae.rs  utils.rs
benches/criterion_benches/tokens/: builder.rs  mod.rs
benches/criterion_benches/v2/: local.rs  mod.rs  public.rs
examples/: direct-protocol.rs  local-using-builders.rs  public-using-builder.rs
src/: errors.rs  lib.rs  pae.rs
src/sodium/: README.md  mod.rs
src/sodium/aead/: README.md  mod.rs  xchacha20poly1305_ietf.rs
src/sodium/hash/: generic_hash.rs  mod.rs
src/tokens/: builder.rs  mod.rs
src/v1/: get_nonce.rs  key_wrapper.rs  local.rs  mod.rs  public.rs
src/v2/: local.rs  mod.rs  public.rs
