[package]
name = "paseto"
description = "An alternative token format to JWT"
version = "1.0.7"
repository = "https://github.com/instructure/paseto"
license = "MIT"
authors = [
  "Cynthia Coan <cynthia@coan.dev>"
]
edition = "2018"

[features]
default = ["v1", "v2", "easy_tokens"]
v1 = ["openssl"]
v2 = ["sodiumoxide"]
easy_tokens = ["serde_json", "chrono"]

[dependencies]
base64 = "^0.11"
chrono = { version = "^0.4", optional = true, features = ["serde"] }
failure = "^0.1"
failure_derive = "^0.1"
openssl = { version = "~0.10.24", optional = true }
ring = { version = "^0.16", features = ["std"] }
serde_json = { version = "^1.0.0", optional = true }
sodiumoxide = { version = "^0.2.2", optional = true }

[dev-dependencies]
criterion = "0.3"
hex = "^0.4.0"

[[bench]]
name = "criterion_benches"
harness = false
