[package]
name = "paseto"
description = "An alternative token format to JWT"
version = "2.0.2+1.0.3"
repository = "https://github.com/instructure/paseto"
license = "MIT"
authors = [
  "Cynthia Coan <cynthia@coan.dev>"
]
edition = "2018"

[features]
default = ["v1", "v2", "easy_tokens_chrono"]
v1 = ["openssl"]
v2 = ["blake2", "chacha20poly1305"]
easy_tokens_chrono = ["serde_json", "chrono"]
easy_tokens_time = ["serde_json", "time"]

[dependencies]
base64 = "^0.13"
blake2 = { version = "^0.9.1", optional = true }
chacha20poly1305 = { version = "^0.8.0", optional = true }
chrono = { version = "^0.4", optional = true, features = ["serde"] }
time = { version = "^0.3", optional = true, features = ["serde"] }
failure = "^0.1"
failure_derive = "^0.1"
openssl = { version = "~0.10.24", optional = true }
ring = { version = "^0.16", features = ["std"] }
serde_json = { version = "^1.0.0", optional = true }

[dev-dependencies]
hex = "^0.4.0"
