[package]
name = "paseto"
description = "An alternative token format to JWT"
version = "3.0.0+1.0.3"
repository = "https://github.com/instructure/paseto"
license = "MIT"
authors = [
  "Cynthia Coan <cynthia@coan.dev>"
]
edition = "2018"

[features]
default = ["v1", "v2", "easy_tokens_chrono"]
v1 = ["openssl"]
v2 = ["blake2", "chacha20poly1305"]
easy_tokens_chrono = ["serde_json", "chrono"]
easy_tokens_time = ["serde_json", "time"]

[dependencies]
base64 = "^0.13"
blake2 = { version = "^0.9.2", optional = true }
chacha20poly1305 = { version = "^0.9.0", optional = true }
chrono = { version = "^0.4", optional = true, features = ["serde"] }
openssl = { version = "~0.10.36", optional = true }
ring = { version = "^0.17", features = ["std"] }
serde_json = { version = "^1.0.68", optional = true }
time = { version = "^0.3", optional = true, features = ["serde-human-readable"] }
thiserror = "^1.0.29"

[dev-dependencies]
hex = "^0.4.3"
